# bevy-texture-coloring-example

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.cargo/: config.toml
.github/workflows/: rust.yml
assets/shaders/: custom_material.wgsl
src/: camera.rs  light.rs  main.rs  soldier.rs  ui.rs
