[package]
name = "bevy-texture-coloring-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bevy-texture-coloring-example"
path = "src/main.rs"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[lints.clippy]
enum_glob_use = "warn"
pedantic = { level = "warn", priority = -1 }
nursery =  { level = "warn", priority = -1 }
unwrap_used = "warn"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.2"
bevy-inspector-egui = "0.24.0"
bevy_egui = "0.27.0"
bevy_panorbit_camera = { version = "0.18.1", features = ["bevy_egui"] }
bevy-scene-hook = "10.0.0"
